--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@types/node": "^18.15.13",
 		"@vitejs/plugin-vue": "^4.1.0",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
