--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@iconify/json": "^2.2.54",
 		"@iconify/vue": "^4.1.1",
 		"@vueuse/core": "^9.13.0",
 		"axios": "^1.3.5",
@@ -19,6 +20,8 @@
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@iconify/tailwind": "^0.1.2",
+		"@iconify/utils": "^2.1.5",
 		"@types/node": "^18.15.13",
 		"@vitejs/plugin-vue": "^4.1.0",
 		"autoprefixer": "^10.4.14",
